# py-pong

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: code-quality.yaml
py_pong/: game_runner.py  settings.py
py_pong/components/: ball.py  player.py
