[tool.poetry]
name = "py-pong"
version = "0.2.0"
description = "An implementation of Pong in Python"
authors = ["Kasey Cordeiro Brown <cordeirokj@gmail.com>"]
readme = "README.md"
packages = [{include = "py_pong"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.6.0"
pre-commit = "^3.4.0"
pre-commit-hooks = "^4.5.0"
pylint = "^3.0.1"
reorder-python-imports = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
py-pong = "py_pong.game_runner:main"

[tool.mypy]  # https://mypy.readthedocs.io/en/stable/config_file.html
python_version = "3.11"
strict = true
color_output = true
